--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "dotenv": "^8.5.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-messages": "^1.0.1",
     "express-session": "^1.17.1",
+    "fs-extra": "^10.0.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.7"
+    "mkdirp": "^1.0.4",
+    "mongoose": "^5.12.7",
+    "multer": "^1.4.2",
+    "resize-img": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
