--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fs-extra": "^10.0.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "localtunnel": "^2.0.1",
     "mongoose": "^5.12.7",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.3",
