--- a/package.json
+++ b/package.json
@@ -16,19 +16,15 @@
     "dotenv": "^8.5.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-fileupload": "^1.2.1",
     "express-messages": "^1.0.1",
     "express-session": "^1.17.1",
-    "fs-extra": "^10.0.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
-    "localtunnel": "^2.0.1",
     "mongoose": "^5.12.7",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.3",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "resize-img": "^2.0.0"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
